# smash

./: .gitignore  .prettierrc.toml  .travis.yml  Cargo.toml  DEVELOPMENT.md  FAQ.md  Makefile  README.md  color.go  env.sh  fmt.sh  font.go  install-gocairo.sh  logview.go  notes.org  prompt.go  prompt_test.go  record.sh  smash  smash.go  smash_main_gui.go  smash_main_headless.go  sp  termbuf.go  terminal.go  terminal_test.go  termview.go  view.go  view_test.go  vt100.html  watch.sh
base/: anim.go  key.go  keysym_string.go
bash/: complete.go
bash/demo/: demo.go
cli/: .gitignore  go.mod  go.sum
cli/bash/: aliases.go  aliases_test.go  complete.go
cli/proto/: ReqRun.go  RespOutput.go  hacks.go  smash.go  smash.pb.go
cli/vt100/: terminal.go  terminal_test.go
console/: console.go
docs/: design.md  development.md  faq.md  goals.md  ideas.md  index.md  install.md  related.md
examples/: readline.rs  term.rs
gtk/: Makefile  gtk.go  smashgtk.cc  smashgtk.h
keys/: key.go  keysym_string.go  sym_string.go
proto/: README.md  gen.ts  node_modules  package.json  smash.d.ts  smash.fbs  smash.proto  tsconfig.json
readline/: commands.go  readline.go  readline_test.go
shell/: shell.go  shell_test.go
spam/: spam.go
src/: byte_scanner.rs  lib.rs  log.rs  main.rs  matcher.rs  prompt.rs  pty.rs  read.rs  readline.rs  shell.rs  term.rs  threaded_ref.rs  view.rs  vt100.rs
ui/: anim.go  ui.go
vt100/: terminal.go  terminal_test.go
web/: .gitignore  package.json  tsconfig.json  webpack.config.js
xlib/: xeventtype.go  xeventtype_string.go  xlib.go
(+44 files in other folders)
